# say-server

./: Cargo.toml  LICENSE  README.md  renovate.json
.github/workflows/: ci.yml  hadolint.yml  review.yml
assets/: index.html
src/: ffi.rs  main.rs  worker.rs
