[package]
name = "say-server"
version = "0.3.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.9", features = ["json"] }
clap = { version = "4.6.1", features = ["derive", "env"] }
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "net", "process", "fs", "io-util"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
uuid = { version = "1.23.3", features = ["v4"] }
